--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.5.4",
     "animate.css": "^3.7.2",
     "cookie-universal-nuxt": "^2.0.16",
     "element-ui": "^2.10.1",
