--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
         "animate.css": "^3.7.2",
         "cookie-universal-nuxt": "^2.0.16",
         "element-ui": "^2.10.1",
-        "nuxt": "^2.0.0"
+        "nuxt": "^2.9.1",
+        "wangeditor": "^3.1.1"
     },
     "devDependencies": {
         "node-sass": "^4.12.0",
         "nodemon": "^1.18.9",
-        "sass-loader": "^7.1.0",
+        "sass-loader": "^7.3.1",
         "scss-loader": "0.0.1",
         "tailwindcss": "^1.1.2"
     }
